Background and some info with styles added.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>About me</title>
+        <title>My personal web page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Hello world!</h1>
+        <div class="hero">
+            <div><br/></div>
+            <div class="details">
+                <h1>I'm <span>Roman Tymoshchuk</span></h1>
+                <p>Group: KP-03</p>
+            </div>
+        </div>
     </body>
 </html>
