Image resized and configured.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     </head>
     <body>
         <div class="hero">
-            <div><br/></div>
             <div class="details">
                 <h1>I'm <span>Roman Tymoshchuk</span></h1>
                 <p>Group: KP-03</p>
+            </div>
+            <div class="images">
+                <img src="my_photo.jpg" class="myself"/>
             </div>
         </div>
     </body>
