--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
         <div class="hero">
             <div class="details">
                 <h1>I'm <span>Roman Tymoshchuk</span></h1>
-                <p>Group: KP-03</p>
+                <p><b>Age:</b> 19</p>
+                <p><b>Group:</b> KP-03</p>
+                <p><b>Hobbies:</b> Chess, football, computer games</p>
+                <p><b>My expectations:</b> Improvement of myself by learning web development</p>
+                <p><b>My experience:</b> 9 months of engineering software development</p>
             </div>
             <div class="images">
                 <img src="my_photo.jpg" class="myself"/>
