--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="hero">
+        <div class="container">
             <div class="details">
                 <h1>I'm <span>Roman Tymoshchuk</span></h1>
                 <p><b>Age:</b> 19</p>
