--- a/index.html
+++ b/index.html
@@ -7,19 +7,28 @@
     <body>
         <div class="container">
             <div class="details">
+                <div>
+                    <ul>
+                        <li class="lang-en"><button id="en" class="translate"> <img src="images/united_kingdom"></button></li>
+                        <li class="lang-ukr"><button id="ukr" class="translate"> <img src="images/ukraine"></button></li>
+                    </ul>
+                </div>
                 <h1>I'm <span>Roman Tymoshchuk</span></h1>
                 <p><b>Age:</b> 19</p>
                 <p><b>Location:</b> Dubno, Ukraine</p>
                 <p><b>Group:</b> KP-03</p>
                 <p><b>Hobbies:</b> Chess, football, computer games</p>
-                <p><b>My expectations:</b> I chose this course to learn another branch of programming. 
-                I expect to get thorough knowledge of web development.</p>
+                <p>
+                    <b>My expectations:</b> I chose this course to learn another branch of programming.
+                    I expect to get thorough knowledge of web development.
+                </p>
                 <p><b>Best technologies:</b> Python, C# .NET, OpenGL</p>
                 <p><b>Work experience:</b> 9 months of engineering software development</p>
             </div>
             <div class="images">
-                <img src="my_photo.jpg" class="myself"/>
+                <img src="images/my_photo.jpg" class="myself" />
             </div>
         </div>
+        <script type="text/javascript" src="./index.js"></script>
     </body>
 </html>
