Button pictures fixed.

--- a/index.html
+++ b/index.html
@@ -6,24 +6,26 @@
     </head>
     <body>
         <div class="container">
-            <div class="details">
-                <div>
+            <div class="main-content">
+                <div class="lang-switcher">
                     <ul>
-                        <li class="lang-en"><button id="en" class="translate"> <img src="images/united_kingdom"></button></li>
-                        <li class="lang-ukr"><button id="ukr" class="translate"> <img src="images/ukraine"></button></li>
+                        <li class="lang"><button id="en" class="translate"> <img src="images/united_kingdom.png"></button></li>
+                        <li class="lang"><button id="ukr" class="translate"> <img src="images/ukraine.png"></button></li>
                     </ul>
                 </div>
-                <h1>I'm <span>Roman Tymoshchuk</span></h1>
-                <p><b>Age:</b> 19</p>
-                <p><b>Location:</b> Dubno, Ukraine</p>
-                <p><b>Group:</b> KP-03</p>
-                <p><b>Hobbies:</b> Chess, football, computer games</p>
-                <p>
-                    <b>My expectations:</b> I chose this course to learn another branch of programming.
-                    I expect to get thorough knowledge of web development.
-                </p>
-                <p><b>Best technologies:</b> Python, C# .NET, OpenGL</p>
-                <p><b>Work experience:</b> 9 months of engineering software development</p>
+                <div class="about-me">
+                    <h1>I'm <span>Roman Tymoshchuk</span></h1>
+                    <p><b>Age:</b> 19</p>
+                    <p><b>Location:</b> Dubno, Ukraine</p>
+                    <p><b>Group:</b> KP-03</p>
+                    <p><b>Hobbies:</b> Chess, football, computer games</p>
+                    <p>
+                        <b>My expectations:</b> I chose this course to learn another branch of programming.
+                        I expect to get thorough knowledge of web development.
+                    </p>
+                    <p><b>Best technologies:</b> Python, C# .NET, OpenGL</p>
+                    <p><b>Work experience:</b> 9 months of engineering software development</p>
+                </div>
             </div>
             <div class="images">
                 <img src="images/my_photo.jpg" class="myself" />
